# lib-proofs

./: BUGS.md  Cargo.toml  ZK_PROOF_ANALYSIS.md
benches/: zk_benchmarks.rs
docs/: api_reference.md  circuits.md  examples.md  getting_started.md  integration.md  performance.md
docs/migration/: quick-reference.md  v0-proof-system.md
examples/: instant_verification_demo.rs  verify_pr2_versioning.rs
src/: crypto.rs  lib.rs  zk.rs  zk_plonky2.rs
src/circuits/: identity_circuit.rs  merkle_circuit.rs  mod.rs  state_transition_circuit.rs  transaction_circuit.rs
src/identity/: credential_proof.rs  identity_proof.rs  verification.rs
src/merkle/: proof_generation.rs  tree.rs  verification.rs
src/plonky2/: circuit.rs  mod.rs  proof_system.rs  recursive.rs  verification.rs
src/provers/: identity_prover.rs  merkle_prover.rs
src/range/: bulletproofs.rs  range_proof.rs  verification.rs  verification_fixed.rs  verification_old.rs
src/recursive/: aggregated_circuit.rs  state_transition.rs
src/state/: aggregation.rs  bootstrap.rs  state_proof.rs
src/transaction/: prover.rs  transaction_proof.rs  verification.rs
src/types/: zk_proof.rs
src/verifiers/: identity_verifier.rs  merkle_verifier.rs  mod.rs  recursive_aggregator.rs  transaction_verifier.rs
src/zk_integration/: mod.rs  plonky2.rs
tests/: crypto_integration_test.rs
