[package]
name = "lib-proofs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
rand = "0.9.2"
blake3 = "1.8.2"
sha3 = "0.11.0-rc.0"
zeroize = "1.8.1"
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
hkdf = "0.13.0-rc.0"
ed25519-dalek = "3.0.0-pre.0"
chacha20poly1305 = "0.11.0-rc.0"
curve25519-dalek = "5.0.0-pre.0"
hex = "0.4.3"
