[package]
name = "lib-proofs"
version = "0.1.0"
edition = "2021"
authors = ["ZHTP Team"]
description = "Zero-Knowledge Proof System for ZHTP - Production-ready ZK proofs with Plonky2"
license = "MIT"
repository = "https://github.com/SOVEREIGN-NETWORK/ZHTP"
keywords = ["zero-knowledge", "plonky2", "blockchain", "privacy", "cryptography"]
categories = ["cryptography", "mathematics"]

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

# Cryptographic dependencies (using zhtp-crypto package)
zhtp-crypto = { path = "../zhtp-crypto" }

# CPU detection for parallel processing
num_cpus = "1.16"

# Serialization
bincode = "1.3"

# Hash map for performance
ahash = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "zk_benchmarks"
harness = false

[lib]
name = "lib_proofs"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
# Production feature for optimized circuits
production = []
# Development feature for testing
dev = []
