[package]
name = "lib-proofs"
version = "0.1.0"
edition = "2021"
authors = ["ZHTP Team"]
description = "Zero-Knowledge Proof System for ZHTP - Production-ready ZK proofs with Plonky2"
license = "MIT"
repository = "https://github.com/SOVEREIGN-NETWORK/ZHTP"
keywords = ["zero-knowledge", "plonky2", "blockchain", "privacy", "cryptography"]
categories = ["cryptography", "mathematics"]

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
log = "0.4"

# Cryptographic dependencies (using lib-crypto package)
lib-crypto = { path = "../lib-crypto" }

# CPU detection for parallel processing
num_cpus = "1.16"

# Serialization
bincode = "1.3"

# Hash map for performance
ahash = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "zk_benchmarks"
harness = false

[lib]
name = "lib_proofs"
path = "src/lib.rs"

[features]
default = ["std", "plonky2-backend"]
std = []
# Production feature for optimized circuits
production = ["plonky2-backend"]
# Development feature for testing
dev = []
# Plonky2 ZK backend (heavy compilation)
plonky2-backend = []
# Lightweight verification only (no proof generation)
verify-only = []
